// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<DocumentFragment>
  <div>
    <table
      class="table is-hoverable is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            ID
          </th>
          <th>
            Email
          </th>
          <th>
            Username
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td>
            redninja@dojo.com
          </td>
          <td
            class="username"
          >
            redninja
          </td>
        </tr>
        <tr>
          <td>
            2
          </td>
          <td>
            blueninja@dojo.com
          </td>
          <td
            class="username"
          >
            blueninja
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`renders when authenticated 1`] = `
<DocumentFragment>
  <div>
    <table
      class="table is-hoverable is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            ID
          </th>
          <th>
            Email
          </th>
          <th>
            Username
          </th>
          <th />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td>
            redninja@dojo.com
          </td>
          <td
            class="username"
          >
            redninja
          </td>
          <td>
            <button
              class="button is-danger is-small"
            >
              Delete
            </button>
          </td>
        </tr>
        <tr>
          <td>
            2
          </td>
          <td>
            blueninja@dojo.com
          </td>
          <td
            class="username"
          >
            blueninja
          </td>
          <td>
            <button
              class="button is-danger is-small"
            >
              Delete
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
